Title is no longer cut off

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ fieldset{
   }
 
   #title {
-    font-size: 1.5em;
+    font-size: 1em;
 	margin-left: 3.5;
  }
   input[type=submit] {
